<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bgLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:id="@+id/container_body" >

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/container_items"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/otp_tooltip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_small"
                        app:cardElevation="@dimen/spacing_xsmall"
                        app:cardCornerRadius="1dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/white"
                            android:orientation="horizontal" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tooltip_message"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/spacing_middle"
                                    android:text="@string/otp_tooltip_msg" />

                                <ImageButton
                                    android:id="@+id/otp_close_tooltip_button"
                                    android:layout_width="?attr/actionBarSize"
                                    android:layout_height="?attr/actionBarSize"
                                    android:background="?attr/selectableItemBackgroundBorderless"
                                    android:clickable="true"
                                    app:srcCompat="@drawable/ic_close_tooltip"
                                    app:tint="@color/icon_tint" />

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2px"
                                android:background="@color/gray_bg" />

                            <Button
                                android:id="@+id/otp_action_button"
                                android:layout_gravity="end"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_middle"
                                android:background="@drawable/button_white"
                                android:stateListAnimator="@null"
                                android:text="@string/action_link_number"
                                android:textColor="@color/colorPrimary"
                                android:minHeight="0dp"
                                android:minWidth="0dp"
                                android:padding="12dp"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/loc_tooltip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_small"
                        app:cardElevation="@dimen/spacing_xsmall"
                        app:cardCornerRadius="1dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/white"
                            android:orientation="horizontal" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/loc_tooltip_message"
                                    android:layout_weight="1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/spacing_middle"
                                    android:text="@string/loc_otp_tooltip_msg" />

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2px"
                                android:background="@color/gray_bg" />

                            <Button
                                android:id="@+id/loc_action_button"
                                android:layout_gravity="end"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/spacing_middle"
                                android:background="@drawable/button_white"
                                android:stateListAnimator="@null"
                                android:text="@string/loc_action_button"
                                android:textColor="@color/colorPrimary"
                                android:minHeight="0dp"
                                android:minWidth="0dp"
                                android:padding="12dp"
                                android:textSize="12sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:scrollbars="none" />

                </LinearLayout>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/splash"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    app:srcCompat="@drawable/ic_feed_active" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/spacing_medium"
                    android:text="@string/label_empty_list"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_60"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!--bottom sheet container-->
        <FrameLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/bottom_sheet_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout >